# matrix-game

./: LICENSE  README.md  matrix_rain.py  requirements.txt
apps/matrix_game_pygame/: .gitignore
apps/matrix_game_pygame/matrix_game_pygame/: main.py
apps/matrix_game_pygame/matrix_game_pygame/components/: display.py  glow.py
apps/matrix_game_pygame/matrix_game_pygame/domain/: gfx.py  rng.py  seeds.py
apps/matrix_game_pygame/matrix_game_pygame/processors/: movement_processor.py  render_processor.py  rotation_processor.py
apps/matrix_game_sdl2/: .gitignore  CMakeLists.txt  vcpkg.json
apps/matrix_game_sdl2/apps/: CMakeLists.txt  matrix_game_sdl2.cpp  print_font_sizes.cpp
apps/matrix_game_sdl2/src/: CMakeLists.txt
apps/matrix_game_sdl2/src/Components/: Appearance.hpp  CMakeLists.txt  RotationVelocity.hpp  Velocity.hpp
apps/matrix_game_sdl2/src/Core/: CMakeLists.txt
apps/matrix_game_sdl2/src/Core/include/Services/: FontCache.hpp
apps/matrix_game_sdl2/src/Core/include/Utils/: Alphabet.hpp
apps/matrix_game_sdl2/src/Core/src/Services/: FontCache.cpp
apps/matrix_game_sdl2/src/Core/src/Utils/: Alphabet.cpp
apps/matrix_game_sdl2/src/ECS/: CMakeLists.txt
apps/matrix_game_sdl2/src/ECS/include/Components/: Appearance.hpp  Position.hpp
apps/matrix_game_sdl2/src/ECS/include/Entities/: GlyphFactory.hpp
apps/matrix_game_sdl2/src/ECS/include/Systems/: ColorSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  RotationSystem.hpp
apps/matrix_game_sdl2/src/ECS/src/Entities/: GlyphFactory.cpp
apps/matrix_game_sdl2/src/ECS/src/Systems/: ColorSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  RotationSystem.cpp
apps/matrix_game_sdl2/src/Entities/: CMakeLists.txt  GlyphFactory.cpp  GlyphFactory.hpp
apps/matrix_game_sdl2/src/Systems/: CMakeLists.txt  ColorSystem.cpp  ColorSystem.hpp  ISystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RotationSystem.cpp  RotationSystem.hpp
cpp/: CMakeLists.txt  vcpkg.json
cpp/src/: CMakeLists.txt  components.h  globals.h  main.cpp
cpp/src/Components/: CMakeLists.txt  Color.hpp  Fonts.hpp  Glyph.hpp  Position2D.hpp  RotationInterval.hpp  Velocity2D.hpp
cpp/src/Systems/: CMakeLists.txt  FallSystem.cpp  FallSystem.hpp  ISystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RotationSystem.cpp  RotationSystem.hpp
matrix_game/: main.py
matrix_game/components/: character.py
matrix_game/domain/: gfx.py  rng.py  seeds.py
matrix_game/processors/: movement_processor.py  render_processor.py  rotation_processor.py
python/: matrix_rain.py  requirements.txt
python/src/components/: font_size.py  fonts.py
python/src/processors/: movement_processor.py  render_processor.py
src/: matrix_rain.py
src/components/: __init__.py  character.py  display.py  font_size.py  fonts.py  glow.py  position.py  rotatable.py  velocity.py
src/domain/: __init__.py  gfx.py  rng.py  seeds.py
src/processors/: __init__.py  movement_processor.py  render_processor.py  rotation_processor.py
